--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+.app-wrapper {
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 70px 1fr;
+  grid-template-columns: 300px 1fr;
+  gap: 5px;
+  grid-template-areas: 'h h'
+    'n c';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  grid-area: h;
+  background: rgb(0, 88, 145);
+  background: linear-gradient(90deg, rgba(0, 88, 145, 1) 0%, rgba(235, 29, 57, 1) 100%);
+
+}
+
+.App-header img {
+  width: 60px;
+  height: 50px;
+  margin: 10px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 70px 8px rgb(234, 234, 255);
+}
+
+.App-nav {
+  grid-area: n;
+  height: calc(100vh - 75px);
+  background: rgb(0, 88, 145);
+  background: linear-gradient(160deg, rgba(0, 88, 145, 1) 0%, rgba(235, 29, 57, 1) 100%);
+}
+
+.nav {
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.nav:first-child,
+.nav:last-child {
+  margin-top: 50px;
+}
+
+.nav a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #fff;
+}
+
+.App-content {
+  grid-area: c;
+  background-color: rgb(179, 238, 206);
+  margin-right:5px;
+}
+
+.content-img {
+  margin: 0 auto;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.content-descr {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  gap: 20px;
 }
